# quantixar-client

./: pyproject.toml
quantixar_client/: __init__.py  main.py
quantixar_client/client/: client.py  config.py  types.py
quantixar_client/utils/: read_parquent.py
