[tool.poetry]
name = "quantixar-client"
version = "0.1.0"
description = ""
authors = ["rahul007-bit <yadavrahul8141@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^15.0.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
starlette = "^0.37.1"
requests = "^2.31.0"
uvicorn = "^0.27.1"
sentence-transformers = "^2.4.0"

[tool.poetry.scripts]
main = "quantixar_client.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
